# Furred-Vault

./: .eslintignore  .eslintrc.cjs  .prettierrc  README.md  bun.lockb  package.json  tailwind.config.js
.github/workflows/: publish.yaml
icon/: generateIcon.ts
splashscreen/: README.md  bun.lockb  index.ts  package.json  splashscreen.tsx  tsconfig.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: PasswordEntry.ts  VaultData.ts
src-tauri/icons/: icon.icns
src-tauri/src/: app_error.rs  config.rs  consts.rs  history.rs  main.rs  serde_file.rs  serde_file_encryption.rs  util.rs  vault.rs
src-tauri/src/commands/: analyze_password.rs  change_password_of_vault.rs  close_splashscreen.rs  create_password_entry.rs  create_vault.rs  delete_password_entry.rs  delete_vault.rs  get_uuid.rs  get_vaults.rs  load_vault.rs  mod.rs  rename_vault.rs  search_passwords.rs  suggest_strong_password.rs  update_password_entry.rs
src-tauri/src/encryption/: decrypt.rs  encrypt.rs  hashing.rs  mod.rs
src/lib/: constants.ts
src/lib/components/: Button.svelte  CopyButton.svelte  Cursor.svelte  GeneratePassword.svelte  GlobalLoadingSpinner.svelte  Input.svelte  PasswordInput.svelte  PasswordStrength.svelte  PasswordVisibilityToggle.svelte  Throbber.svelte  Toasts.svelte
src/lib/stores/: closePopover.ts  enteredPassword.ts  globalKeyStore.ts  globalLoadingSpinner.ts  globalMouseStore.ts  selectedVault.ts  toasts.ts  vaultData.ts  vaults.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
static/: splashscreen.html
(+10 files in other folders)
