workspace = { members = [] }
[package]
name = "app"
version = "0.5.0"
description = "A password manager built with tauri and svelte"
authors = ["RoyalFoxy"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"


[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.7",  features = [ "clipboard-write-text", "dialog-all"] }
confy = "0.6.1"
aes-gcm = "0.10.3"
aes = "0.8.4"
rand = "0.8.5"
sha2 = "0.10.8"
anyhow = "1.0.83"
thiserror = "1.0.60"
ts-rs = { version = "8.1.0", features = ["uuid", "uuid-impl"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
git2 = "0.18.3"
directories = "5.0.1"
openssl = { version = "0.10.64", features = ["vendored"] }
passwords = "3.1.16"
fuzzy-matcher = "0.3.7"


[features]
custom-protocol = ["tauri/custom-protocol"]
